--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "curso-2024-desarrollo-frontend-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://DiegoViscarra.github.io/curso-2024-desarrollo-frontend-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
